# Pathtracer

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Pathtracer.natvis  vcpkg.json
libs/: CMakeLists.txt
libs/engine/: CMakeLists.txt  vcpkg.json
libs/engine/cmake/: CompilerWarnings.cmake  PreventInSourceBuilds.cmake  Utils.cmake
libs/engine/libs/fast_obj/: CMakeLists.txt
libs/engine/res/shaders/opengl/: pos3norm3uv2.vert
libs/engine/src/: Logger.cpp  Logger.hpp  Window.cpp  Window.hpp
libs/engine/src/algorithm/: Hash.cpp  Hash.hpp
libs/engine/src/base/: Camera.hpp  Material.cpp  Mesh.hpp  ResourceManager.hpp  Sprite.cpp  Sprite.hpp
libs/engine/src/core/: Handle.hpp  Resource.cpp  Resource.hpp  ResourcePath.cpp  ResourcePath.hpp  ResourceType.cpp  ResourceType.hpp
libs/engine/src/entity/: SystemManager.hpp
libs/engine/src/file/: FileManager.cpp  FileManager.hpp
libs/engine/src/rendering/: IProgram.cpp  IProgram.hpp  IRenderingDeviceInfo.hpp  IUniformBuffer.hpp  Renderer.cpp  Types.hpp
libs/engine/src/rendering/opengl/: RenderingDeviceGL.cpp  ShaderGL.cpp  UniformBufferGL.cpp  UniformBufferGL.hpp
libs/engine/src/resource/: IResource.hpp
libs/engine/test/: CMakeLists.txt  Resource.cc  example.cc
libs/fast_obj/: CMakeLists.txt
libs/flecs/: CMakeLists.txt
libs/glad/: CMakeLists.txt
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
libs/glm/: CMakeLists.txt
libs/imgui/: Builder.cmake  CMakeLists.txt
libs/imgui/source/: CMakeLists.txt
libs/imgui/source/backends/: imgui_impl_opengl3.cpp
libs/rapidjson/: build.ps1
libs/rapidjson/cmake/: RapidJSONConfig.cmake
libs/sdl2/: CMakeLists.txt
libs/sdl2/linux/include/: SDL_config.h  SDL_revision.h
libs/sdl2/linux/lib/cmake/SDL2/: sdl2-config.cmake
libs/sdl2/linux/lib/pkgconfig/: sdl2.pc
libs/sdl2/linux/lib/x64/: libSDL2-2.0.so.0.16.0
libs/sdl2/windows/lib/x64/: SDL2.lib  SDL2main.lib
libs/stb/: CMakeLists.txt  stb_image.h
res/shaders/opengl/: pos3.vert  pos3norm3uv2.frag  pos3norm3uv2.vert  pos3uv2.frag  pos3uv2.vert
src/: Color.hpp  EventDispatcher.hpp  Logger.cpp  Logger.hpp  Object.hpp  Ray.hpp  Renderer.cpp  Renderer.hpp  SDLUtils.hpp  Scene.cpp  Scene.hpp  Sphere.cpp  Sphere.hpp  Vec2i.hpp  Vec3.hpp  Vec3f.hpp  Window.cpp  Window.hpp  main.cpp
src/algorithm/: Hash.cpp
src/base/: Camera.cpp  Camera.hpp  Entity.cpp  Entity.hpp  Light.cpp  Light.hpp  Material.cpp  Material.hpp  Mesh.cpp  Mesh.hpp  ResourceManager.cpp  ResourceManager.hpp  Scene.cpp  Scene.hpp  Sprite.hpp
src/container/: VectorView.hpp
src/entity/: Entity.hpp  EntityID.hpp
src/file/: FileManager.cpp  FileManager.hpp
src/rendering/: Buffer.hpp  IBuffer.hpp  IFrameBuffer.hpp  IProgram.cpp  IProgram.hpp  IRenderingDevice.hpp  IShader.cpp  IShader.hpp  ITexture.hpp  IUniformBuffer.h  IUniformBuffer.hpp  Program.cpp  Program.hpp  ProgramManager.cpp  ProgramManager.hpp  Renderer.cpp  Renderer.hpp  RenderingDevice.hpp  RenderingDeviceInfo.hpp  Shader.cpp  Shader.hpp  ShaderManager.cpp  ShaderManager.hpp  Texture.hpp  Types.hpp
src/rendering/opengl/: BufferGL.cpp  BufferGL.hpp  BufferManagerGL.cpp  BufferManagerGL.hpp  FrameBufferGL.cpp  FrameBufferGL.hpp  ProgramGL.cpp  ProgramGL.hpp  ProgramManagerGL.cpp  ProgramManagerGL.hpp  RenderingDeviceGL.cpp  RenderingDeviceGL.hpp  RenderingDeviceInfoGL.cpp  RenderingDeviceInfoGL.hpp  ShaderGL.cpp  ShaderGL.hpp  ShaderManagerGL.cpp  ShaderManagerGL.hpp  TextureGL.cpp  TextureGL.hpp  UniformBufferGL.cpp  UniformBufferGL.hpp  UtilsGL.cpp  UtilsGL.hpp
